# class-notes/28-Stock_API/src/routes/index.js
@@ -25,10 +25,10 @@ router.use('/users', require('./user'))
  router.use('/firms', require('./firm'))
   //product:
    router.use('/products', require('./product'))
-// // purchase:
-// router.use('/purchases', require('./purchase'))
-// // sale:
-// router.use('/sales', require('./sale'))
+ // purchase:
+ router.use('/purchases', require('./purchase'))
+ // sale:
+ router.use('/sales', require('./sale'))
 
 // document:
 router.use('/documents', require('./document'))
